--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -8,5 +8,6 @@ db.entity.package = com.goobico.remindme.server.entity
 
 # Hibernate properties
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
-
+hibernate.hbm2ddl.auto=validate
+hibernate.format_sql = true
+hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
