--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,5 @@
 # MySQL properties
 db.driver=com.mysql.cj.jdbc.Driver
-#db.url=jdbc:mysql://localhost:3306/spring_hiber?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
 db.url=jdbc:mysql://localhost:3306/spring_hiber
 db.username=root
 db.password=root
@@ -11,3 +10,5 @@ hibernate.show_sql=true
 hibernate.hbm2ddl.auto=validate
 hibernate.format_sql = true
 hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+#hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
