--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,15 +1,11 @@
 # MySQL properties
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/spring_hiber
-#db.url=jdbc:mysql://localhost:3306/spring_hiber?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
-db.username=root
-db.password=root
-db.entity.package = com.goobico.remindme.server.entity
-
+db.url=jdbc:mysql://127.0.0.1:3306/my_db
+db.username=bestuser
+db.password=bestuser
+db.entity.package=com.goobico.remindme.server.entity
 # Hibernate properties
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=validate
-hibernate.format_sql = true
-#hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#
+hibernate.format_sql=true
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
